user product page image

--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1971,7 +1971,7 @@ span.page-views {
 
                img.explore-product-image {
                   width: 101px;
-                  height: 81px;
+                  height: auto;
                   padding-top: 10px;
               }
           }
