Add github file button text to: Add Github File-Link

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -412,7 +412,7 @@ $this->inlineScript()->appendScript(
                     <?= $this->translate('Cancel Upload') ?>
                 </button>
                 <button id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
-                    <?= $this->translate('Add GitHub File') ?>
+                    <?= $this->translate('Add Github File-Link') ?>
                 </button>
                 <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Close') ?></button>
             </div>
