--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -19,6 +19,9 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+
+$tableProject = new Default_Model_Project();
+$this->product_views = $tableProject->fetchProjectViews($this->_projectId);
 ?>
 <div class="prod-widget-box right details">  
                                      <span class="title" > Details </span>  
