payout renamed to plings

--- a/application/modules/default/views/scripts/home/index-common.phtml
+++ b/application/modules/default/views/scripts/home/index-common.phtml
@@ -116,7 +116,7 @@ $member = $getAuthUser->getAuthUser();
                                                 </a>
                                             </li>
                                             <li class="link first">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'payout') ?>">
+                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
                                                     <?= $this->translate('Plings') ?>
                                                 </a>
                                             </li>
