--- a/application/modules/default/views/scripts/user/partials/userHeader.phtml
+++ b/application/modules/default/views/scripts/user/partials/userHeader.phtml
@@ -73,10 +73,10 @@ $helperMember = new Default_View_Helper_BuildMemberUrl();
         </a>
     </li>
     
-    <li class="header-menu-left-item <?php echo $this->tab == 'payout' ? 'active' : ''; ?>">
-        <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'payout'); ?>">
+    <li class="header-menu-left-item <?php echo $this->tab == 'plings' ? 'active' : ''; ?>">
+        <a href="<?php echo $helperMember->buildMemberUrl($this->member->member_id, 'plings'); ?>">
             <span class="glyphicon glyphicon-usd"></span>
-            <?= $this->translate('Pling') ?>
+            <?= $this->translate('Plings') ?>
         </a>
     </li>
 </ul>
