--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -98,7 +98,7 @@ if ($this->countDownloadsOverall > 0) {
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5 text-left text-uppercase"><strong>Products</strong></div>
-        <div class="col-md-2 text-right text-uppercase"><strong>Downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Downloads" data-trigger="hover" data-html="true" data-content="Sum of all downloads of all files of this product within this month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-2 text-right text-uppercase"><strong>Downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Downloads" data-trigger="hover" data-html="true" data-content="Sum of all downloads of all files (active or inactive) of this product within this month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <div class="col-md-2 text-right text-uppercase"><strong>Pling-Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Pling-Factor" data-trigger="hover" data-html="true" data-content="The Pling-Factor's base is $-cent and depends on the product category.<br>A factor of '1' means:<br>1 Download equals 1 $-cent."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <!--<div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="plings" data-trigger="hover" data-html="true" data-content="You can collect new plings every month. The number of plings results from the pling factor. At the beginning of each month you will be paid the plings of the previous month to your PayPal account. Where: <b>1 pling = $0.01</b>.<br>A valid PayPal address must be maintained in your settings and the payout amount must be at least one dollar. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>-->
         <div class="col-md-2 text-right text-uppercase"><strong>Earned</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="payout" data-trigger="hover" data-html="true" data-content="The payout amount results from the Pling-Factor of each product, where the result in $-cent is the number of downloads multiplied by the Pling-Factor."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
@@ -219,6 +219,7 @@ if ($this->countDownloadsOverall > 0) {
             If you do not meet these requirements, we can not pay you out anything that month. 
             Non-paid-out months will not be retroactively paid out in the future.
             We will check these requirements every month. 
+            Downloads are counted of all files during that month, be it active or inactive.
             If all requirements were met and we have no reasons to decide otherwise you will be receiving the payout amount to your PayPal account within the following month.</p>
             
     </div>
