store id parameter in url

--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -102,7 +102,9 @@
                     key: true,
                     create: false,
                     edit: false,
-                    list: false
+                    list: true,
+                    title: 'id',
+                    width: '5%',
                 },
                 host: {
                     title: 'hostname',
