product report butten renamed

--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -75,7 +75,7 @@ $this->product_views = $tableProject->fetchProjectViews($this->product->project_
             <div class="small " id="product-actions">
                 <a data-toggle="modal" data-target="#report-product-<?= $this->product->project_id ?>" role="button"
                    href="#report-product-<?= $this->product->project_id ?>">
-                    <span class="glyphicon glyphicon-alert"></span> Report
+                    <span class="glyphicon glyphicon-alert"></span> Report SPAM
                 </a>
             </div>
         </div>
