form reported products: sorting added

--- a/application/modules/backend/views/scripts/reportproducts/index.phtml
+++ b/application/modules/backend/views/scripts/reportproducts/index.phtml
@@ -39,6 +39,8 @@
             jqueryuiTheme: true,
             paging: true,
             title: 'Table of reports',
+            sorting: true, //Enable sorting
+            defaultSorting: 'counter DESC', //Set default sorting
             actions: {
                 listAction: '/backend/reportproducts/list',
                 createAction: '/backend/reportproducts/create',
