reported products updated

--- a/application/modules/backend/views/scripts/reportproducts/index.phtml
+++ b/application/modules/backend/views/scripts/reportproducts/index.phtml
@@ -40,7 +40,7 @@
             paging: true,
             title: 'Table of reports',
             sorting: true, //Enable sorting
-            defaultSorting: 'counter DESC', //Set default sorting
+            defaultSorting: 'created_at DESC', //Set default sorting
             actions: {
                 listAction: '/backend/reportproducts/list',
                 createAction: '/backend/reportproducts/create',
