--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -249,6 +249,22 @@
 /** /COMMON **/
 
 /** TOP MENU **/
+ .metamenu{
+    width:100%;     
+    background-color:#fff;
+    height:15px;
+    a#toggleStoreBtn{
+      float: left; 
+      margin-left: 20px;  
+    }
+    a.home-link{
+      float: left;
+      img.logo{
+        width:16px; 
+        height:16px;
+      }
+    }    
+  }
 
   .meta-nav-top {
     
@@ -275,6 +291,66 @@
 /** /TOP MENU **/
 
 /** HEADER **/
+ul.meta-nav-top
+    {     
+      list-style: none;
+      li{
+          float: left;          
+      }
+    }
+
+    ul.meta-nav-top-right{
+      margin:0px;
+      margin-right: 30px;
+      float: right;
+      li{
+        padding:0 10px;
+      }
+    }
+  
+
+    ul.meta-nav-top-left{
+       float: left;      
+    }
+
+#toggleStoreContainer{
+    z-index: 1000;     
+    display: none; 
+    width: 60%;
+    height: 200px;  
+    top:12px;
+    left:190px;
+  }
+
+  #toggleStoreContainer a{
+      display: block;
+      font-size: 16px;
+    
+  }
+  #toggleStoreContainer a:hover{
+      color:#6a7686;
+  }
+  
+  #toggleStoreContainer b{
+      text-decoration: underline;
+      text-align: center;
+      padding-left: 20px;
+      font-size: 18px;
+      cursor: default;
+  }
+  #toggleStoreContainer ul {
+      list-style: none;
+      padding:0;
+      padding-top: 10px;
+      padding-left:30px;
+  }
+  #toggleStoreContainer ul li{
+      font-size: 14px;
+  }
+  #toggleStoreContainer ul li:hover{
+      background-color: transparent;
+     
+  }
 
   header {
 
