--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -128,39 +128,48 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
         }
 
     </style>
+ <?php
+        $domainshelper = new Default_View_Helper_FetchDomains();
+        $this->domainobjects = $domainshelper->fetchDomainObjects();    
+        $sname = Zend_Registry::get('store_host');
+        $store_config = Zend_Registry::get('store_config');
+    ?>
 
-    <div class="small metamenu" >   
-        <?php            
-            $domainshelper = new Default_View_Helper_FetchDomains();
-            $this->domainobjects = $domainshelper->fetchDomainObjects();            
-            echo '<ul class="nav nav-pills meta-nav-top left">';
-            $i = 0;
-            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://openDesktop.org"><img src="/images/system/storeLogo.png" style="width:16px; height:16px"/> openDesktop.org :</a> </li>';                             
-            $sname = Zend_Registry::get('store_host');
+    <div class="small metamenu" > 
+        <a href="http://openDesktop.org" class="home-link">
+         <img src="/images/system/storeLogo.png" class="logo"/> openDesktop.org 
+         </a> 
+        <a href="#" id="toggleStoreBtn">Browse : <?php echo $store_config['name'];?></a>
+                                  
+        <div class="dropdown-menu" id="toggleStoreContainer" >
+          <div>
+            <div class="row">
+            <?php
+            
             $preOrder = 0;
             $curOrder = 0;
-            foreach ($this->domainobjects as $obj) {
+            foreach ($this->domainobjects as $obj) {                
                 $o =  $obj['order'];   
                 $curOrder = floor($obj['order']/1000);      
                 if($curOrder<10 or $curOrder>30) continue;
                 $host =$obj['host'];
-                $name =$obj['name'];
+                $name =$obj['name']; 
                 if($curOrder!= $preOrder) $i=0;
 
                 if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</ul></li>';      
+                   echo '</div>';      
                 }
-                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>'; 
-
+                
                 if($curOrder==10 && $i==0){
                     // applications                    
-                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';                                                                 
+                    echo '<div class="col-lg-4"><b>Applications</b><ul>';                                                                 
                 }else if($curOrder ==20 && $i ==0){
                     // artworks                    
-                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
+                    echo '<div class="col-lg-4"><b>Desktops</b><ul>';                                                                  
                 }else if($curOrder ==30 && $i ==0){
-                    // multimedia                    
-                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';                                                                  
+                    // multimedia                   
+                    echo '<div class="col-lg-4"><b>Artworks</b><ul>'; 
+                                                                                    
                 }                
                 if($sname == $host )
                 {
@@ -169,27 +178,30 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
                 {
                     echo '<li>';
                 }
-
-                $keyword = $obj['meta_keywords'];
-
-                if($keyword!='')
-                {
-                    $keyword = ' - '.$keyword;
-                }
-                echo '<a href="http://' . $host . '">'.  $name .' <span style="font-size:11px; color:#065893">'.$keyword.'</span></a> </li>';    
+                
+                echo '<a href="/s/'.$name.'">'. $name.'</a></li>'; 
+                echo '<div style="clear:both;"></div>';
 
                 $preOrder = floor($obj['order']/1000);  
                  $i++;                                                  
             }
-            echo '</ul></li>';   
-            echo '</ul>';                   
-                     
-                ?>
-
-           <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
+               echo '</div>';
+            ?>
+          
+            </div>  
+          </div>
+        </div>
+         <ul class="meta-nav-top meta-nav-top-right" >
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
                <li> <a id="aboutContent" href="#">About </a>   </li>              
-               </ul>
+          </ul>
+          
         </div>
+
+        <?php $this->inlineScript()->appendScript(
+    '    $(document).ready(function(){
+            Metaheader.setup();                  
+        });
+    ');
 
