--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -256,6 +256,7 @@
     a#toggleStoreBtn{
       float: left; 
       margin-left: 20px;  
+      text-decoration: none;
     }
     a.home-link{
       float: left;
