--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -195,6 +195,7 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
                <li> <a id="aboutContent" href="#">About </a>   </li>              
+               <li> <a id="plings" href="/plings/">Plings </a>   </li>          
           </ul>
           
         </div>
