--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5060,3 +5060,41 @@ img.imgpopover
         font-size: 12px;
     }
 }
+
+/** plings **/
+
+main#plings-page{
+  .wrapper{
+       width:600px; 
+       float:left;
+       padding:20px;
+       .title{
+          background-color:#ccc; 
+          height: 30px;
+      }
+      .label{
+          padding-top: 10px
+      }
+
+    .depth1 {
+           padding-left: 20px;
+      }
+    .depth2 {
+           padding-left: 40px;
+      }
+    .depth3 {
+         padding-left: 60px;
+    }
+    .depth4 {
+         padding-left: 80px;
+    }
+    .depth5 {
+         padding-left: 100px;
+    }
+    .factor {
+         padding-right: 10px;
+    }
+  }
+}
+/** plings END**/
+
