--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5071,9 +5071,12 @@ main#plings-page{
        .title{
           background-color:#ccc; 
           height: 30px;
-      }
+      }      
       .label{
           padding-top: 10px
+      }
+      .row:hover{
+        background-color: #eef; 
       }
 
     .depth1 {
