--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5065,20 +5065,20 @@ img.imgpopover
 
 main#plings-page{
   .wrapper{
-       width:600px; 
-       float:left;
+       width:450px;        
        padding:20px;
        .title{
           background-color:#ccc; 
           height: 30px;
       }      
       .label{
-          padding-top: 10px
+          padding-top: 10px;
+          padding-left: 0px;
       }
-      .row:hover{
+      .row:not(:first-child):hover{
         background-color: #eef; 
       }
-
+      
     .depth1 {
            padding-left: 20px;
       }
