--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -22,13 +22,14 @@
 
 
 ?>
+
 <main id="plings-page">   
     <section class="body-wrap" id="cat-list">
         <section class="wrapper">
         	<div class="row title">
         	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 	        	<span class="label lable-default left">
-	        		
+	        		Category
 	        	</span>
         		<span class="label lable-default right" >
         			Pling Factor
