--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -35,6 +35,8 @@ $cat_title_left = $logoWidth+60;
 $tabs_left = (int)$this->template['header-nav-tabs']['absolute-left'];
 $tabs_left += $cat_title_length*10;
 $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
+$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
+$baselogo= Zend_Registry::get('config')->settings->client->default->baselogo;
 ?>
     <style>
 
@@ -96,8 +98,8 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
             line-height: 24px;
             margin-right: <?=$this->template['header-nav-tabs']['margin-right']?>;
         }
-    
-        
+   
+       
         ul.menu-nav-tabs li.active {
             background: <?=$this->template['header-nav-tabs']['background-color-active']?> none repeat scroll 0 0;
         }
@@ -112,8 +114,8 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
 
         .header_cat_link {
               bottom: 0; position: absolute; color: blue; font-size: 18pt; left: <?= $cat_title_left ?>px;
-        } 
-    
+        }
+   
         .nav-divider-pling{
             color:#E2E2E2;
         }
@@ -130,47 +132,47 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
     </style>
  <?php
         $domainshelper = new Default_View_Helper_FetchDomains();
-        $this->domainobjects = $domainshelper->fetchDomainObjects();    
+        $this->domainobjects = $domainshelper->fetchDomainObjects();   
         $sname = Zend_Registry::get('store_host');
         $store_config = Zend_Registry::get('store_config');
     ?>
 
-    <div class="small metamenu" > 
+    <div class="small metamenu" >
         <a href="http://openDesktop.org" class="home-link">
-         <img src="/images/system/storeLogo.png" class="logo"/> openDesktop.org 
-         </a> 
+         <img src="<?php echo $baselogo ?>" class="logo"/> openDesktop.org
+         </a>
         <a href="#" id="toggleStoreBtn">Browse : <?php echo $store_config['name'];?></a>
-                                  
+                                 
         <div class="dropdown-menu" id="toggleStoreContainer" >
           <div>
             <div class="row">
             <?php
-            
+           
             $preOrder = 0;
             $curOrder = 0;
-            foreach ($this->domainobjects as $obj) {                
-                $o =  $obj['order'];   
-                $curOrder = floor($obj['order']/1000);      
+            foreach ($this->domainobjects as $obj) {               
+                $o =  $obj['order'];  
+                $curOrder = floor($obj['order']/1000);     
                 if($curOrder<10 or $curOrder>30) continue;
                 $host =$obj['host'];
-                $name =$obj['name']; 
+                $name =$obj['name'];
                 if($curOrder!= $preOrder) $i=0;
 
                 if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</div>';      
+                   echo '</div>';     
                 }
-                
+               
                 if($curOrder==10 && $i==0){
-                    // applications                    
-                    echo '<div class="col-lg-4"><b>Applications</b><ul>';                                                                 
+                    // applications                   
+                    echo '<div class="col-lg-4"><b>Applications</b><ul>';                                                                
                 }else if($curOrder ==20 && $i ==0){
-                    // artworks                    
-                    echo '<div class="col-lg-4"><b>Desktops</b><ul>';                                                                  
+                    // artworks                   
+                    echo '<div class="col-lg-4"><b>Desktops</b><ul>';                                                                 
                 }else if($curOrder ==30 && $i ==0){
-                    // multimedia                   
-                    echo '<div class="col-lg-4"><b>Artworks</b><ul>'; 
-                                                                                    
-                }                
+                    // multimedia                  
+                    echo '<div class="col-lg-4"><b>Artworks</b><ul>';
+                                                                                   
+                }               
                 if($sname == $host )
                 {
                     echo '<li class="active">';
@@ -178,37 +180,36 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
                 {
                     echo '<li>';
                 }
-                // z.b 150001 ende ==1 go real link otherwise /s/$name 
+                // z.b 150001 ende ==1 go real link otherwise /s/$name
                 $last_char_check = substr($o, -1);
-                if($last_char_check=='1'){                    
-                    echo '<a href="http://' . $host . '">'.  $name .'</a></li>';     
+                if($last_char_check=='1'){                   
+                    echo '<a href="http://' . $host . '">'.  $name .'</a></li>';    
                 }else{
-                    echo '<a href="/s/'.$name.'">'. $name.'</a></li>';     
+                    echo '<a href="http://'.$baseurl.'/s/'.$name.'">'. $name.'</a></li>';    
                 }
-                
+               
                 echo '<div style="clear:both;"></div>';
 
-                $preOrder = floor($obj['order']/1000);  
-                 $i++;                                                  
+                $preOrder = floor($obj['order']/1000); 
+                 $i++;                                                 
             }
                echo '</div>';
             ?>
-          
-            </div>  
+         
+            </div> 
           </div>
         </div>
          <ul class="meta-nav-top meta-nav-top-right" >
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
-               <li> <a id="aboutContent" href="#">About </a>   </li>              
-               <li> <a id="plings" href="/plings/">Plings </a>   </li>          
+               <li> <a id="aboutContent" href="#">About </a>   </li>             
+               <li> <a id="plings" href="/plings/">Plings </a>   </li>         
           </ul>
-          
+         
         </div>
 
         <?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){
-            Metaheader.setup();                  
+            Metaheader.setup();                 
         });
     ');
-
