spam candidate overview page

--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -54,6 +54,11 @@ $this->product_views = $tableProject->fetchProjectViews($this->product->project_
         <span class="col-lg-7 value"> <?= $this->product_views ?></span>
     </div>
 
+    <div class="row">
+        <span class=" col-lg-5">spam reports</span>
+        <span class="col-lg-7 value"> <?= $this->product->amount_reports ?></span>
+    </div>
+
     <?php /**
      * <div class="row">
      * <span class=" col-lg-5" >
